--- a/style.css
+++ b/style.css
@@ -1,4 +1,29 @@
+/* desktop layout 1440px */
+
+*{
+    margin: 0px; 
+    padding: 0px;
+}
+
+body {
+    font-size: 13px;
+    background-color: hsl(0,0%,90.98%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
 .principal {
-    font-family: "Manrope";
+    width: 50%;
+    display: flex;
+    line-height: 20px;
+    border-radius: 15px;
+    background-color: rgb(157,92,123);
+}
+
+.principal #imgPrincipal{
+    border-radius: 10px 0px 0px 10px;
 }
 
