--- a/style.css
+++ b/style.css
@@ -28,4 +28,48 @@ body {
     border-radius: 10px 0px 0px 10px;
 }
 
+.txt {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 5%;
+    width: 100%;
+    position: relative;
+}
 
+.txt .titulo {
+    font-family: "Manrope", sans-serif;
+    font-size: 19px;
+    margin-bottom: 5%;
+    font-weight: 700;
+}
+
+.txt .descricao {
+    font-size: 14px;
+    margin-bottom: 3%;
+}
+
+.txt .pessoa {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    height: 100%;
+    justify-content: space-between;
+    margin-top: 5%;
+}
+
+.txt .pessoa .imgAvatar {
+    display: flex;
+    width: 42%;
+    justify-content: space-between;
+}
+
+.imgAvatar img {
+    border-radius: 100px;
+}
+
+.pessoa #button {
+    background-color: brown;
+    border-radius: 50px;
+}
