--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ body {
     left: 60%;
     opacity: 0.92;
     box-shadow: 5px 5px 5px rgb(37, 37, 37);
-
+    display: none;
 }
 
 .share p {
@@ -137,4 +137,19 @@ body {
 
 .share #buttonCloseOne {
     display: none;
+}
+
+@media screen and (max-width:376px) {
+    .principal {
+        width: 85%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .principal #imgPrincipal {
+        width: 100%;
+        border-radius: 10px 10px 0px;
+    }
 }
