--- a/style.css
+++ b/style.css
@@ -94,7 +94,6 @@ body {
     align-items: center;
     top: 50%;
     left: 60%;
-    opacity: 0.92;
     box-shadow: 5px 5px 5px rgb(37, 37, 37);
     display: none;
 }
@@ -117,7 +116,6 @@ body {
     position: absolute;
     top: 80%;
     left: 46%;
-    opacity: 0.92;
     transform: rotateY(0deg) rotate(45deg);
 }
 
@@ -139,7 +137,7 @@ body {
     display: none;
 }
 
-@media screen and (max-width:376px) {
+@media screen and (max-width: 416px) {
     .principal {
         width: 85%;
         display: flex;
@@ -151,6 +149,49 @@ body {
     .principal #imgPrincipal {
         width: 100%;
         border-radius: 10px 10px 0px;
+
+    }
+    .txt {
+        margin-top: 5%;
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .txt .pessoa .imgAvatar {
+        width: 58%;
+    }
+
+    .share {
+        top: 75%;
+        left: 0;
+        width: 92%;
+        height: 40px;
+        border-radius: 0px 0px 10px 10px;
+        box-shadow: 0px 0px 0px;
+    }
+
+    .share .shareIcons {
+        width: 35%;
+        margin-right: 15%;
+    }
+
+    .share #buttonCloseOne {
+        background-color: rgb(210, 218, 204);
+        border-radius: 50px;
+        padding: 8px;
+        margin-right: 4%;
+        display: inline-block;
+        text-decoration: none;
+        cursor: pointer;
+        outline: none;
+        color: white;
+        border: none;
+    }
+
+    .share .triangle {
+        display: none;
     }
 }
 
