--- a/style.css
+++ b/style.css
@@ -137,6 +137,12 @@ body {
     display: none;
 }
 
+@media screen and (min-width: 1720px) {
+    .principal {
+        width: 40%;
+    }
+}
+
 @media screen and (max-width: 416px) {
     .principal {
         width: 85%;
