--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ body {
 }
 
 .pessoa #buttonClose {
-    background-color: rgb(210, 218, 204);
+    background-color: rgb(200,203,186);
     border-radius: 50px;
     padding: 8px;
     margin-right: 4%;
