--- a/style.css
+++ b/style.css
@@ -74,7 +74,11 @@ body {
 .content .pessoa .imgAvatar {
     display: flex;
     width: 45%;
-    justify-content: space-between;
+    justify-content: flex-start;
+}
+
+.content .pessoa .imgAvatar .nome {
+    padding-left: 0.5em;
 }
 
 .imgAvatar img {
@@ -149,7 +153,7 @@ body {
     display: none;
 }
 
-.share #buttonCloseOne {
+.share #buttonCloseTwo {
     display: none;
 }
 
@@ -199,7 +203,7 @@ body {
         margin-right: 15%;
     }
 
-    .share #buttonCloseOne {
+    .share #buttonCloseTwo {
         background-color: rgb(210, 218, 204);
         border-radius: 50px;
         padding: 8px;
